opam-version: "2.0"
maintainer: "The opam team"
authors: "The opam team"
homepage: "https://github.com/ocaml/opam2web"
bug-reports: "https://github.com/ocaml/opam2web/issues"
depends: [
  "ocaml" {>= "4.02.3"}
  "dune" {build}
  "opam-lib" {>= "1.3.0"}
  "opamfu" {>= "0.1.2"}
  "re"
  "uri" {>= "1.3.11"}
  "cow" {= "2.3.0"}
  "js_of_ocaml" {>= "2.4.1"}
  "js_of_ocaml-ppx"
  "opam-core" {>= "2.0.0"}
  "opam-format" {>= "2.0.0"}
  "opam-state" {>= "2.0.0"}
  "opam-client" {>= "2.0.0"}
  "cohttp-lwt-unix"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/ocaml/opam2web.git"
synopsis: "Tool to generate the opam.ocaml.org website"
description: """
This utility creates a static website from an OPAM universe, listing all
available packages and their details. A homepage and OPAM documentation is 
included as well.
"""
