opam-version: "2.0"
maintainer: "The opam team"
authors: "The opam team"
homepage: "https://github.com/ocaml/opam2web"
bug-reports: "https://github.com/ocaml/opam2web/issues"
depends: [
  "ocaml" {>= "4.02.3"}
  "dune"
  "opam-lib" {>= "1.3.0"}
  "opamfu" {>= "0.1.2"}
  "re"
  "uri" {>= "1.3.11"}
  "cow" {>= "2.3.0"}
  "js_of_ocaml" {>= "3.3.0"}
  "js_of_ocaml-ppx"
  "opam-core" {>= "2.0.0" & < "2.1.0~~"}
  "opam-format" {>= "2.0.0" & < "2.1.0~~"}
  "opam-state" {>= "2.0.0" & < "2.1.0~~"}
  "opam-client" {>= "2.0.0" & < "2.1.0~~"}
  "cohttp-lwt-unix"
  "yojson" {>= "1.6.0"}
  "opam-file-format" {< "2.1.1"}
  "cmdliner" {>= "1.0.4"}
  "omd" {>= "1.3.1"}
]
build: [
#  ["dune" "subst"] {pinned}
# until https://github.com/ocaml/dune/issues/1997
  ["dune" "build" "-p" name "-j" jobs]
]
dev-repo: "git+https://github.com/ocaml/opam2web.git"
synopsis: "Tool to generate the opam.ocaml.org website"
description: """
This utility creates a static website from an OPAM universe, listing all
available packages and their details. A homepage and OPAM documentation is 
included as well.
"""
