(install
 (section share)
 (files
   (css/bootstrap.min.css as css/bootstrap.min.css)
   (css/bootstrap-responsive.css as css/bootstrap-responsive.css)
   (css/bootstrap.css as css/bootstrap.css)
   (css/bootstrap-responsive.min.css as css/bootstrap-responsive.min.css)
   (css/site.css as css/site.css)
   (css/docs.css as css/docs.css)
   (css/opam2web.css as css/opam2web.css)
   (js/bootstrap.js as js/bootstrap.js)
   (js/bootstrap.min.js as js/bootstrap.min.js)
   (js/google-code-prettify/lang-ml.js as js/google-code-prettify/lang-ml.js)
   (js/google-code-prettify/lang-css.js as js/google-code-prettify/lang-css.js)
   (js/google-code-prettify/lang-vhdl.js as js/google-code-prettify/lang-vhdl.js)
   (js/google-code-prettify/lang-go.js as js/google-code-prettify/lang-go.js)
   (js/google-code-prettify/lang-xq.js as js/google-code-prettify/lang-xq.js)
   (js/google-code-prettify/lang-sql.js as js/google-code-prettify/lang-sql.js)
   (js/google-code-prettify/lang-n.js as js/google-code-prettify/lang-n.js)
   (js/google-code-prettify/lang-lisp.js as js/google-code-prettify/lang-lisp.js)
   (js/google-code-prettify/lang-scala.js as js/google-code-prettify/lang-scala.js)
   (js/google-code-prettify/prettify.js as js/google-code-prettify/prettify.js)
   (js/google-code-prettify/lang-proto.js as js/google-code-prettify/lang-proto.js)
   (js/google-code-prettify/lang-lua.js as js/google-code-prettify/lang-lua.js)
   (js/google-code-prettify/lang-apollo.js as js/google-code-prettify/lang-apollo.js)
   (js/google-code-prettify/prettify.css as js/google-code-prettify/prettify.css)
   (js/google-code-prettify/lang-vb.js as js/google-code-prettify/lang-vb.js)
   (js/google-code-prettify/lang-wiki.js as js/google-code-prettify/lang-wiki.js)
   (js/google-code-prettify/lang-tex.js as js/google-code-prettify/lang-tex.js)
   (js/google-code-prettify/lang-hs.js as js/google-code-prettify/lang-hs.js)
   (js/google-code-prettify/lang-yaml.js as js/google-code-prettify/lang-yaml.js)
   (js/google-code-prettify/lang-clj.js as js/google-code-prettify/lang-clj.js)
   (js/site.js as js/site.js)
   (js/jquery.js as js/jquery.js)
   (img/opam.svg as img/opam.svg)
   (img/opam.png as img/opam.png)
   (img/github.png as img/github.png)
   (img/GitHub-Mark-32px.png as img/GitHub-Mark-32px.png)
   (img/camel_rider.png as img/camel_rider.png)
   (img/favicon.png as img/favicon.png)
   (img/glyphicons-halflings.png as img/glyphicons-halflings.png)
   (img/glyphicons-halflings-white.png as img/glyphicons-halflings-white.png)
   (img/ocamlpro.png as img/ocamlpro.png)
   (img/ocaml.png as img/ocaml.png)
))
