(library
 (name opam2web)
 (wrapped false)
 (public_name opam2web)
 (modules_without_implementation o2wTypes)
 (libraries str omd cow opam-core opam-format opam-state opam-client cmdliner apalog))

(rule
 (with-stdout-to
  version.ml
  (run sh -c
    "printf 'let commit = \"%s\"\nlet string = \"%s\"\\n' \"`git rev-parse HEAD`\" \"`git describe --always --dirty`\"")))
